--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <!-- linking css-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
+    <!-- jQuery CDN-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+    </script>
+
+    <!-- linking JavaScript -->
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+    <!--- linking momentJS -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
+
+    <!--- linking Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
 
 
