pseudocoded some js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="lead">Pay Attention To The Information</p>
         </div>
         <br>
-        <div class="trainTimes">
+        <div class="currentTime">
         </div>
 
 
