--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="tableContainer">
             <div class="tableHeader">
-                <p>Current Train Schedules</p>
+                <p id="currentSchedule">Current Train Schedules</p>
             </div>
 
             <table class="table" id="scheduleTable">
@@ -66,7 +66,7 @@
         <br>
         <div class="inputContainer">
             <div class="inputHeader">
-                <p>Add Train</p>
+                <p id="addTrain">Add Train</p>
             </div>
 
             <form>
