changed headers padding and margins

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="tableContainer">
             <div class="tableHeader">
-                <p id="currentSchedule">Current Train Schedules</p>
+                <p>Current Train Schedules</p>
             </div>
 
             <table class="table" id="scheduleTable">
