--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <!--- linking momentJS -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
 
-    <!--- linking Firebase -->
+
+    <!-- Firebase References -->
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
 
     <title>Train Schedule</title>
 
@@ -93,8 +95,55 @@
 
 </html>
 
+<!-- Script -->
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyA-YKhfPEy-Ok3RQzp2zJSCFuv2x13vH4c",
+        authDomain: "bootcamp-fa86c.firebaseapp.com",
+        databaseURL: "https://bootcamp-fa86c.firebaseio.com",
+        projectId: "bootcamp-fa86c",
+        storageBucket: "bootcamp-fa86c.appspot.com",
+        messagingSenderId: "86878239138",
+        appId: "1:86878239138:web:33ebf0d7896043ea4f9afb",
+        measurementId: "G-DRB3ZRKH7Y"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+</script>
+
+<script>
+    // Create a variable to reference the database.
+    var database = firebase.database();
+
+    // Initial Values
+    var destination = "";
+    var nextTrainName = "";
+    var lastTrainName = "";
+    var newTrainName = "";
+    var lastTrainName = "";
+    var frequency = "";
+    var minutesAway = "";
 
 
+    // Capture Button Click
+    $("#add-train").on("click", function(event) {
+        event.preventDefault();
 
+        // Grabbed values from text boxes
+        trainName = $("#name-input").val().trim();
+        destination = $("#destination-input").val().trim();
+        firstTrainTime = $("#firstTrainTime-input").val().trim();
+        frequency = $("#frequency-input").val().trim();
 
-</body>
+        // Code for handling the push
+        database.ref().push({
+            trainName: trainName,
+            destination: destination,
+            firstTrainTime: firstTrainTime,
+            frequency: frequency,
+            dateAdded: firebase.database.ServerValue.TIMESTAMP
+        });
+
+    });
